# slsk_discography_downloader_script

./: .borg_startup_marker  .env.example  .gitignore  .hypercode-session.json  .hypercode_startup_marker  .tormentnexus-session.json  .tormentnexus_startup_marker  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  HANDOFF.md  IDEAS.md  MANUAL.md  README.md  ROADMAP.md  TODO.md  VERSION.md  VISION.md  _artist_names.json  audit-2026-05-24.jsonl  build_rust.bat  check_status.py  docker-compose.yml  fill_status.py  final_integration_report.txt  patch_dotenv.py  release_notes_v2.1.0.md  scan_artists.py  update_docs.py
.memory/: main.md  state.yaml
discography_webapp/: .gitignore  __init__.py  auth.py  bob_soulseek_rs.pyd  dependencies.py  filler_worker.py  install_service.bat  install_service.ps1  install_startup.bat  launch_watchdog.py  main.py  pilot_feature.py  protocol_reconcile_test.py  protocol_test.py  register_port.bat  requirements.txt  run_server.sh  start.bat  start_watchdog.bat  startup.ps1  stop_watchdog.bat  systray.py  watchdog.py
discography_webapp/rust_bridge/: Cargo.toml
discography_webapp/rust_bridge/bob_soulseek_rs/: Cargo.toml
discography_webapp/rust_bridge/bob_soulseek_rs/src/: lib.rs
discography_webapp/rust_bridge/src/: lib.rs
logs/: .e4108e5e329c2f9319f217c1d41539b31b9d1977-audit.json
tests/: pilot_autonomous_test.py  test_acoustid.py  test_agent_framework.py  test_ai_integration.py  test_config.py  test_integration.py  test_musicbrainz.py  test_orchestrator.py  test_post_processor.py  test_protocol.py  test_queue.py  (+1 more)
(+384 files in other folders)
