[package]
name = "bob_soulseek_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "bob_soulseek_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = { version = "1.35", features = ["full"] }
