[package]
name = "bob_soulseek_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "bob_soulseek_rs"
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.5.0"
futures-util = "0.3.32"
hex = "0.4.3"
lazy_static = "1.5.0"
md5 = "0.8.0"
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
soulseek-rs-lib = "0.3.0"
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7.18"
