[package]
name = "bob_soulseek_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "bob_soulseek_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.2", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
tokio = { version = "1.36.0", features = ["full"] }
md5 = "0.7.0"
byteorder = "1.5.0"
